--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ asgiref==3.3.4
 Django==3.2
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
-pytz==2021.1
+gunicorn==20.1.0
 sqlparse==0.4.1
 whitenoise==4.0
